# The-Life-of-a-Plastic-Particle

./: .gitignore  CMakeLists.txt  README.md
OceanGrid/src/trajectories/: trajectory_origin.xyz
src/: main.cpp
src/cameras/: GlobeSequence.cpp  GlobeSequence.h  HandOffs.cpp  HandOffs.h  MainScene.cpp  MainScene.h  PhaseCoordinator.cpp  PhaseCoordinator.h  RenderCompositeSystem.cpp  RenderCompositeSystem.h
src/dataloaders/: DataConverter.cpp  DataConverter.h  LoadNC.cpp  LoadNC.h
src/globe/: ZoomTransitionController.cpp  ZoomTransitionController.h  controller.cpp  controller.h  density.cpp  density.h  dynamicScale.cpp  dynamicScale.h  globe.cpp  globe.h  many.cpp  many.h  spin.cpp  spin.h  timeCounter.cpp  timeCounter.h  trajectories.cpp  trajectories.h  travel.cpp  travel.h  utils_geo_color.h  utils_netcdf.h
src/intro/: AdvanceIntroHandler.h  Intro.cpp  Intro.h
src/scene/: BathymetryMesh.cpp  BathymetryMesh.h  Currents.cpp  Currents.h  DynamicBackgroundController.h  FogController.h  FollowCameraManipulator.h  Particle.cpp  Particle.h  SurfacePlane.cpp  SurfacePlane.h  TogglePlaybackHandler.h
